# twi-booru-stats

./: .gitignore  README.md  fetch.py  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: fetch-booru-data.yml  main.yml
charts/artists/: index.html
charts/books/: index.html
charts/characters/: index.html
charts/filesizes/: index.html
charts/filetypes/: index.html
charts/uploaders/: index.html
charts/uploads/: index.html
charts/volumes/: index.html
css/: sortable.css
js/: default_config.js  utils.js
js/charts/: artists.js  books.js  characters.js  filesize.js  filetypes.js  uploaders.js  uploads.js  volumes.js
js/data/: artist_tags.json  book_tags.json  character_tags.json  post_filesizes.json  post_filetypes.json  post_uploader_counts.json  posts_per_day.json  posts_per_day_cumulative.json  posts_per_month.json  posts_per_month_cumulative.json  volume_tags.json
stats/: artists.html  books.html  characters.html  config.toml  index.html  uploads.html  volumes.html
stats/content/charts/: artists.md  books.md  characters.md  filesizes.md  filetypes.md  uploaders.md  uploads.md  volumes.md
stats/css/: styles.css
stats/data/: artist_tags.json  posts.json  posts_per_day_cumulative.json  posts_per_month_cumulative.json  volume_tags.json
stats/js/: default_config.js  utils.js
stats/static/css/: styles.css
stats/templates/: artists.html  base.html  books.html  characters.html  chart_page.html  filesizes.html  filetypes.html  index.html  macros.html  sortable_table.html  uploaders.html  uploads.html  volumes.html
(+21 files in other folders)
