[tool.poetry]
name = "twi-booru-stats"
version = "0.1.0"
description = "Data fetching for twi-booru-stats"
authors = ["neon-leitz <neon.leitz99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gql = "^3.5.0"
pandas = "^2.2.0"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
